changelink to clickable

--- a/index.html
+++ b/index.html
@@ -478,12 +478,16 @@ console.log(quantumTrickster.larpAction());</pre>
       <div class="p-4 text-black bg-white rounded-b text-xs font-mono">
         <p>📄 <strong>Official PumpFun Contract</strong></p>
         <p class="mt-2 break-all select-all">
-          0xDEADbeef1234567890CafeBabe0011223344556677
+          <a href="https://pump.fun/0xDEADbeef1234567890CafeBabe0011223344556677" target="_blank"
+            rel="noopener noreferrer" class="text-blue-600 hover:underline">
+            0xDEADbeef1234567890CafeBabe0011223344556677
+          </a>
         </p>
-        <p class="mt-4 italic text-gray-600">Click to copy if supported, or replace with actual token address.</p>
+        <p class="mt-4 italic text-gray-600">Click to open contract on Pump.fun.</p>
       </div>
     </div>
   </div>
+
 
   <!-- JavaScript -->
   <script>
