--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@ console.log(quantumTrickster.larpAction());</pre>
       <div class="p-4 text-black bg-white rounded-b text-xs font-mono">
         <p>📄 <strong>Official Letsbonk.fun Contract</strong></p>
         <p class="mt-2 break-all select-all">
-          <a href="https://pump.fun/0xDEADbeef1234567890CafeBabe0011223344556677" target="_blank"
+          <a href="https://letsbonk.fun/token/hmQ5zbJw8DgHpjdSWxEnZQjfCt5MExPgDQteQ3Vbonk" target="_blank"
             rel="noopener noreferrer" class="text-blue-600 hover:underline">
             https://letsbonk.fun/token/hmQ5zbJw8DgHpjdSWxEnZQjfCt5MExPgDQteQ3Vbonk
           </a>
