--- a/index.html
+++ b/index.html
@@ -467,8 +467,8 @@ console.log(quantumTrickster.larpAction());</pre>
         <p class="mt-2">
           Follow updates, drops, and coded messages from the dev:
           <br />
-          <a href="https://x.com/your_username_here" target="_blank" class="text-blue-600 underline">
-            https://x.com/your_username_here
+          <a href="https://x.com/i/communities/1945558194497212772" target="_blank" class="text-blue-600 underline">
+            Follow on X
           </a>
         </p>
         <p class="mt-4 italic text-gray-600">Follow On X</p>
