--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@ console.log(quantumTrickster.larpAction());</pre>
             Follow on X
           </a>
         </p>
-        <p class="mt-4 italic text-gray-600">Follow On X</p>
+        <!-- <p class="mt-4 italic text-gray-600">Follow On X</p> -->
       </div>
     </div>
   </div>
