--- a/index.html
+++ b/index.html
@@ -463,12 +463,12 @@ console.log(quantumTrickster.larpAction());</pre>
         <button onclick="closeModal('modal-x')" class="text-white hover:text-gray-300">✖</button>
       </div>
       <div class="p-4 text-black bg-white rounded-b text-xs font-mono">
-        <p>🔗 <strong>X.com Link</strong></p>
+        <p>🔗 <strong>X.com Community link</strong></p>
         <p class="mt-2">
           Follow updates, drops, and coded messages from the dev:
           <br />
           <a href="https://x.com/i/communities/1945558194497212772" target="_blank" class="text-blue-600 underline">
-            Follow on X
+            https://x.com/i/communities/1945558194497212772
           </a>
         </p>
         <!-- <p class="mt-4 italic text-gray-600">Follow On X</p> -->
