--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@ console.log(quantumTrickster.larpAction());</pre>
       <div class="p-4 text-black bg-white rounded-b text-xs font-mono">
         <p>🔗 <strong>X.com Community link</strong></p>
         <p class="mt-2">
-          Follow updates, drops, and coded messages from the dev:
+          <!-- Follow updates, drops, and coded messages from the dev: -->
           <br />
           <a href="https://x.com/i/communities/1945558194497212772" target="_blank" class="text-blue-600 underline">
             https://x.com/i/communities/1945558194497212772
