--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>grockcompanion.exe</title>
+  <title>$gc.exe</title>
   <link rel="icon" type="image/png" href="/favicon.png" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -82,10 +82,10 @@
       <span class="text-black text-[10px] font-mono mt-1">ContractAddress.exe</span>
     </div>
 
-    <div class="flex flex-col items-center cursor-pointer" onclick="openModal('modal-x')">
+    <!-- <div class="flex flex-col items-center cursor-pointer" onclick="openModal('modal-x')">
       <img src="xlogo.png" class="w-12 h-12" />
       <span class="text-black text-[10px] font-mono mt-1">X.exe</span>
-    </div>
+    </div> -->
 
     <div class="flex flex-col items-center cursor-pointer" onclick="openModal('modal-bonk')">
       <img src="bonk.png" class="w-12 h-12" />
@@ -488,7 +488,7 @@ console.log(quantumTrickster.larpAction());</pre>
         <p class="mt-2 break-all select-all">
           <a href="https://letsbonk.fun/token/hmQ5zbJw8DgHpjdSWxEnZQjfCt5MExPgDQteQ3Vbonk" target="_blank"
             rel="noopener noreferrer" class="text-blue-600 hover:underline">
-            https://letsbonk.fun/token/hmQ5zbJw8DgHpjdSWxEnZQjfCt5MExPgDQteQ3Vbonk
+            https://letsbonk.fun/token/g21KHuzWcv88G3ks6qCy7CuGNQJvCLE2qHPsBecbonk
           </a>
         </p>
         <p class="mt-4 italic text-gray-600">Click to open contract</p>
